<resources>
    <string name="app_name">MyCillin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Setting</string>
    <string name="permission_desc">In order to use MyCillin, you have to allow permissions on your Android device.</string>
    <string name="permission_rationale_title">This permission needed</string>
    <string name="permission_rationale_message">All permissions needed to access all features</string>
    <string name="permission_rationale_settings_button_text">SETTING</string>
    <string name="all_permissions_denied_feedback">All permissions needed</string>
    <string name="camera_permission_denied_feedback">Camera permission Needed</string>
    <string name="storage_permission_denied_feedback">Galerry permission needed</string>
    <string name="call_permission_denied_dialog_title">Call permission</string>
    <string name="audio_permission_denied_dialog_feedback">You can\'t make a call until permission granted</string>
    <string name="version">VERSION</string>
    <string name="storage">Storage</string>
    <string name="izinkan">ALLOW</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="intro_one_desc">We do not know when we are sick and need health service</string>
    <string name="intro_two_desc">Medical field innovation that make it easier for you to access health services</string>
    <string name="intro_three_desc">Let\'s join with MyCillin big family</string>
    <string name="intro_three_title">and… happy family is yours</string>
    <string name="intro_four_desc">Almost done…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_four_select_language">Select your language</string>
    <string name="intro_four_language_in">Bahasa Indonesia</string>
    <string name="intro_four_language_en">English</string>
    <string name="intro_four_get_started">GET STARTED</string>
    <string name="loginActivity_tosNotes">By registering, I have read and agreed to MyCillin\'s Term of Use and Privacy Policy</string>
    <string name="loginActivity_continueWithFacebook">Continue with Facebook</string>
    <string name="loginActivity_register">Register</string>
    <string name="loginActivity_alreadyHaveAccount">Already have an account</string>
    <string name="loginActivity_registerNote">In order for us to get closer to you please complete the following data:</string>
    <string name="loginActivity_registerEMail">E-Mail</string>
    <string name="loginActivity_registerPassword">Password</string>
    <string name="loginActivity_registerConfirmPassword">Confirm Password</string>
    <string name="loginActivity_registerCity">City</string>
    <string name="loginActivity_login">Login</string>
    <string name="loginActivity_forgotPassword">Forgot Password</string>
    <string name="pressBackAgainToLeave">Press back again to leave</string>
    <string name="loginActivity_registerCompleteNotesOne">Thank you for the trust and information you have provided to us. A confirmation link will be sent to your email address in the next 24 hours.</string>
    <string name="loginActivity_registerCompleteNotesTwo">Immediately activate your account in order to enjoy the convenience and service of MyCillin.</string>
    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_medical_record">Medical Record</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about_mycillin">About</string>
    <string name="nav_e_wallet">E-Wallet</string>
    <string name="nav_invite_friend">Invite Friend</string>
    <string name="homeFragment_startService">Click To Start Service</string>
    <string name="homeFragment_share">Share</string>
    <string name="homeFragment_walletBalance">E-Wallet Balance</string>
    <string name="homeFragment_walletAmount">Rp 175.000</string>
    <string name="homeFragment_walletDesc">E-Wallet amount in rupiah</string>
    <string name="homeFragment_NoteOne">today, tomorow, and together</string>
    <string name="homeFragment_NoteTwo">You will love the way we care about your health</string>
    <string name="call">Call</string>
    <string name="homeFragment_topUp">Top-Up</string>
    <string name="servicesActivity_whoNeedsHelpTxt">Who needs help ?</string>
    <string name="servicesActivity_dropdownTitle">Select a family member</string>
    <string name="servicesActivity_patientsName">Patient\'s Name</string>
    <string name="servicesActivity_bookDoctorTitle">BOOK A DOCTOR</string>
    <string name="servicesActivity_bookDoctorDesc">Order a healthcare and medical service by a doctor to your home</string>
    <string name="serviceActivity_medicalReservationTitle">MEDICAL RESERVATION</string>
    <string name="serviceActivity_medicalReservationDesc">Hospital and clinic reservation service</string>
    <string name="servicesActivity_consultationServiceTitle">CONSULTATION SERVICE</string>
    <string name="servicesActivity_consultationServiceDesc">An online and real time consultation service with a doctor</string>
    <string name="servicesActivity_ambulanceServiceText">AMBULANCE SERVICE</string>
    <string name="servicesActivity_ambulanceServiceDesc">An ambulance rental service close to you</string>
    <string name="servicesActivity_homecareServiceText">HOMECARE SERVICE</string>
    <string name="servicesActivity_homecareServiceDesc">A homecare service close to you</string>
    <string name="serviceActivity_redeemPrescriptionTitle">REDEEM PRESCRIPTION</string>
    <string name="serviceActivity_redeemPrescriptionDesc">Purchase and delivery prescription service supported by pharmacy network</string>
    <string name="serviceBookDoctorActivity_addressTitle">ADDRESS</string>
    <string name="serviceBookDoctorActivity_MapViewTitle">MAP VIEW</string>
    <string name="title_activity_maps">Map</string>
    <string name="serviceBookDoctorActivity_filterBtn">Use Search Filter</string>
    <string name="serviceBookDoctorActivity_searchBtn">SEARCH</string>
    <string name="filterBookDoctorDialog_typesOfMedicalPersonelTitle">Types of medical personnel</string>
    <string name="filterBookDoctorDialog_typesOfSpecialistsTitle">Types of specialists (Doctors only)</string>
    <string name="filterBookDoctorDialog_medicalPersonelGenderTitle">Gender of medical personnel</string>
    <string name="filterBookDoctorDIalog_cancelBtn">CANCEL</string>
    <string name="filterBookDoctorDIalog_applyBtn">APPLY</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_account">Settings</string>
    <string name="accountActivity_manageAccountTitle">Manage Account</string>
    <string name="accountActivity_changePasswordTitle">Change Password</string>
    <string name="accountActivity_signOutTitle">Sign Out</string>
    <string name="accountActivity_termsOfUseTitle">Terms of Use</string>
    <string name="manageAccountsDialogLayout_accounts">Accounts</string>
    <string name="accountDetailActivity_infoDesc">Please provide your information correctly in order to get a quality medical services</string>
    <string name="accountDetailActivity_fullNameDesc">Full Name</string>
    <string name="accountDetailActivity_addressDesc">Address</string>
    <string name="accountDetailActivity_phoneDesc">Phone Number</string>
    <string name="accountDetailActivity_genderDesc">Gender</string>
    <string name="accountDetailActivity_maleDesc">Male</string>
    <string name="accountDetailActivity_femaleDesc">Female</string>
    <string name="accountDetailActivity_DateOfBirthDesc">Date of Birth</string>
    <string name="accountDetailActivity_heightDesc">Height (cm)</string>
    <string name="accountDetailActivity_weightDesc">Weight (kg)</string>
    <string name="accountDetailActivity_bloodTypeDesc">Blood Type</string>
    <string name="accountDetailActivity_insuranceDesc">Insurance</string>
    <string name="accountDetailActivity_paymentDesc">Payment Method</string>
    <string name="accountDetailActivity_isAgreeDesc">I agree to the terms and conditions and agree to provide personal information to MyCillin.</string>
    <string name="menu_save">Save</string>
    <string name="accountDetailActivity_title">Account Detail</string>
    <string name="insuranceActivity_title">Insurance</string>
    <string name="insuranceActivity_infoDesc">MyCillin has partnered with several health insurance providers. Please select the health insurance provider you use for easy payment process and health insurance claims.</string>
    <string name="insuranceActivity_insuranceProviderDesc">Insurance Provider</string>
    <string name="insuranceActivity_insurancePolicyNumberDesc">Insurance Policy Number</string>
    <string name="insuranceActivity_policyHolderNameDesc">Policy Holder Name</string>
    <string name="insuranceActivity_insurancedNameDesc">Insured Name</string>
    <string name="insuranceActivity_footerInfoOneDesc">You can skip this page if you do not have insurance or your health insurance company is not yet available.</string>
    <string name="insuranceActivity_footerInfoTwoDesc">Currently we have yet not provide cashless payment from insurance provider.</string>
    <string name="paymentActivity_infoDesc">To make payment easier, we provide several payment methods. Please choose a payment method.</string>
    <string name="paymentActivity_ewalletDesc">MyCillin E-Wallet</string>
    <string name="paymentActivity_creditCardDesc">Credit Card</string>
    <string name="paymentActivity_payPalDesc">PayPal</string>
    <string name="paymentActivity_paymentTitle">Payment</string>
    <string name="eWalletDialog_eWalletTitle">E-Wallet</string>
    <string name="eWalletDialog_infoOneDesc">MyCillin E-Wallet is a payment method provided by MyCillin in collaboration with Bank Mandiri.</string>
    <string name="eWalletDialog_infoTwoDesc">If you choose this method, you allow MyCillin to debit your e-wallet balance for each service charge.</string>
    <string name="eWalletDialog_iAgreeDesc">I Agree</string>
    <string name="eWalletDialog_infoThreeDesc">The system will automatically check your e-wallet balance.</string>
    <string name="eWalletDialog_infoFourDesc">You can top up your e-wallet balance via Bank Mandiri ATM or Bank Mandiri e-cash service.</string>
    <string name="aboutFragment_version">Version</string>
    <string name="aboutFragment_connect">Connect with us</string>
    <string name="aboutFragment_contact">Contact us</string>
    <string name="rowMedicalRecord_month">APR</string>
    <string name="rowMedicalRecord_day">10</string>
    <string name="rowMedicalRecord_year">2017</string>
    <string name="rowMedicalRecord_medicalPersonnelDesc">Medical Personnel :</string>
    <string name="rowMedicalRecord_doctorNameDesc">dr Andi Husada</string>
    <string name="changePasswordDialog_title">Change Password</string>
    <string name="changePasswordDialog_old">Old Password</string>
    <string name="changePasswordDialog_new">New Password</string>
    <string name="changePasswordDialog_confirmNew">Confirm New Password</string>
    <string name="nav_history">History</string>
    <string name="filterDoctorActivity_partnerType">Paramedic Type</string>
    <string name="filterDoctorActivity_partnerSpecialization">Paramedic Specialization</string>
    <string name="accountDetailActivity_allDesc">All</string>
    <string name="filterDoctorActivity_BPJStitle">BPJS</string>
    <string name="findServiceActivity_requestLocationTitle">Request Location</string>
    <string name="findServiceActivity_currentLocationTitle">Current Location</string>
    <string name="findServiceActivity_searchLocationTitle">Search Location</string>
</resources>