<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_medical_record"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_medical_record" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_about_mycillin" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_e_wallet" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_invite_friend" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
