<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_history"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_medical_record"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_medical_record"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_wallet"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_e_wallet"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_about"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_about_mycillin"
        app:showAsAction="ifRoom" />
</menu>