<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_weight="1"
                android:text="@string/eWalletDialog_eWalletTitle"/>

            <ImageButton
                android:id="@+id/eWalletDialog_ib_saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_check"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/eWalletDialog_tv_infoOneDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/primaryText"
                android:textSize="15sp"
                android:text="@string/eWalletDialog_infoOneDesc" />

            <TextView
                android:id="@+id/eWalletDialog_tv_infoTwoDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/primaryText"
                android:textSize="15sp"
                android:text="@string/eWalletDialog_infoTwoDesc" />

            <CheckBox
                android:id="@+id/eWalletDialog_cb_iAgreeCheckBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/eWalletDialog_iAgreeDesc"/>

            <TextView
                android:id="@+id/eWalletDialog_tv_infoThreeDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/primaryText"
                android:textStyle="italic"
                android:textSize="12sp"
                android:text="@string/eWalletDialog_infoThreeDesc" />

            <TextView
                android:id="@+id/eWalletDialog_tv_infoFourDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/primaryText"
                android:textSize="15sp"
                android:text="@string/eWalletDialog_infoFourDesc" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>