<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:layout_gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/changePasswordDialog_title"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            app:passwordToggleEnabled="true" >

            <EditText
                android:id="@+id/changePasswordDialog_et_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/changePasswordDialog_old"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            app:passwordToggleEnabled="true" >

            <EditText
                android:id="@+id/changePasswordDialog_et_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/changePasswordDialog_new"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            app:passwordToggleEnabled="true" >

            <EditText
                android:id="@+id/changePasswordDialog_et_confirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/changePasswordDialog_confirmNew"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/filterBookDoctor_bt_cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_no_rad_accent"
                android:textColor="@color/primaryText"
                android:text="@string/filterBookDoctorDIalog_cancelBtn" />

            <Button
                android:id="@+id/filterBookDoctor_bt_applyBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_no_rad_primary"
                android:textColor="@color/primaryText"
                android:text="@string/filterBookDoctorDIalog_applyBtn"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>