<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mycillin.user.activity.FindServiceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/findServiceActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_below="@+id/findServiceActivity_toolbar"
        android:layout_above="@+id/findServiceActivity_rl_footerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/findServiceActivity_ll_locationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/frame_alt"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/findServiceActivity_requestLocationTitle"/>

                <RadioGroup
                    android:id="@+id/findServiceActivity_rg_locationRg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/findServiceActivity_rb_currentLocationRb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/findServiceActivity_currentLocationTitle"/>

                    <RadioButton
                        android:id="@+id/findServiceActivity_rb_searchLocationRb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/findServiceActivity_searchLocationTitle"/>

                </RadioGroup>

                <TextView
                    android:id="@+id/findServiceActivity_tv_placeInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/findServiceActivity_ll_filterContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/frame_alt"
                android:orientation="vertical" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_marginTop="@dimen/spacing_small" >

                    <EditText
                        android:id="@+id/findServiceActivity_et_partnerType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/filterDoctorActivity_partnerType"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:focusable="false"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_marginTop="@dimen/spacing_small" >

                    <EditText
                        android:id="@+id/findServiceActivity_et_partnerSpecialization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/filterDoctorActivity_partnerSpecialization"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:focusable="false"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/accountDetailActivity_genderDesc"/>

                <RadioGroup
                    android:id="@+id/findServiceActivity_rg_genderRg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/findServiceActivity_rb_genderAllRb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/accountDetailActivity_allDesc"/>

                    <RadioButton
                        android:id="@+id/findServiceActivity_rb_genderMaleRb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/accountDetailActivity_maleDesc"/>

                    <RadioButton
                        android:id="@+id/findServiceActivity_rb_genderFemaleRb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/accountDetailActivity_femaleDesc"/>

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/filterDoctorActivity_BPJStitle"/>

                <Switch
                    android:id="@+id/findServiceActivity_sb_BPJSSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/findServiceActivity_rl_footerContainer"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/findServiceActivity_bt_searchBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_no_rad_primary"
            android:text="@string/serviceBookDoctorActivity_searchBtn"/>

    </RelativeLayout>

</RelativeLayout>
